# Robots_Basic_Frame_TypeC

./: .clang-format  .cproject  .gitignore  .mxproject  .project  Basic_Frame_TypeC_2023 Debug.launch  Basic_Frame_TypeC_2023 Wireless Debug.launch  Basic_Frame_TypeC_2023.ioc  Basic_Frame_TypeC_2023.launch  CMakeLists.txt  CMakePresets.json  Hero_2024_TypeC Debug.launch  README.md  _chassis___app_8h_source.html  _comm___app_8h_source.html  _gimbal___app_8h_source.html  _i_m_u___app_8h_source.html  _omni___drive_8h_source.html  _p_c___u_a_r_t___app_8h_source.html  _timer___app_8h_source.html  ammo__lid_8hpp_source.html  annotated.html  annotated_dup.js  apps__types_8h_source.html  arm__common__tables_8h_source.html  arm__const__structs_8h_source.html  arm__math_8h_source.html  attitude__defines_8h_source.html  attitude__types_8h_source.html  bmi088__middleware_8h_source.html  bmi088__reg_8h_source.html  build.ninja  buzzer_8h_source.html  can_8c.html  can_8c.js  can__isr_8hpp_source.html  class_ammo_lid.html  class_can_comm-members.html  class_can_comm.html  class_chassis_app-members.html  (+351 more)
Core/Src/: CMakeLists.txt  can.c  cmake_install.cmake  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  main.cpp  robot_config.hpp  spi.c  stm32f4xx_it.c  syscalls.c  tim.c  usart.c
Core/Src/Algorithms/: CMakeLists.txt  cmake_install.cmake
Core/Src/Algorithms/attitude/: CMakeLists.txt  ahrs.h  angle_process.c  angle_process.h  attitude_defines.h  attitude_types.h  cmake_install.cmake  madgewick.cpp  madgewick.h  madgewick.hpp  madgwick_ahrs.c  mahony_ahrs.c
Core/Src/Algorithms/attitude_resolution/: CMakeLists.txt  ahrs.h  angle_process.c  angle_process.h  madgwick_ahrs.c  mahony_ahrs.c
Core/Src/Algorithms/comms/: CMakeLists.txt  cmake_install.cmake  comms_defines.h  comms_types.h  crc.c  crc.cpp  crc.h  crc.hpp  quantize.cpp  quantize.hpp  queue_m.c  queue_m.h
Core/Src/Algorithms/control/: CMakeLists.txt  cmake_install.cmake  control_defines.h  control_types.h  control_types.hpp  feedforward.c  feedforward.cpp  feedforward.h  feedforward.hpp  feedfoward.c  fuzzy_control.c  fuzzy_control.h  pid.c  pid.cpp  pid.h  ramp.c  ramp.cpp  ramp.h  ramp.hpp  virtual_timer.cpp  virtual_timer.hpp
Core/Src/Algorithms/maths/: CMakeLists.txt  cmake_install.cmake  digital_filters.cpp  digital_filters.hpp  kalman_filters.c  kalman_filters.h  maths.c  maths.h  maths_defines.h  maths_test.cpp  maths_types.h
Core/Src/Applications/: CMakeLists.txt  Chassis_App.c  Chassis_App.cpp  Chassis_App.h  Chassis_App_Test.cpp  Comm_App.c  Comm_App.cpp  Comm_App.h  Control_App.c  Control_App.cpp  Control_App.h  Gimbal_App.c  Gimbal_App.cpp  Gimbal_App.h  IMU_App.c  IMU_App.cpp  IMU_App.h  Omni_Drive.cpp  Omni_Drive.h  PC_UART_App.c  PC_UART_App.cpp  PC_UART_App.h  RC_App.cpp  RC_App.hpp  Referee_App.cpp  Referee_App.h  Shoot_App.c  Shoot_App.cpp  Shoot_App.h  Swerve_Drive.cpp  Swerve_Drive.h  Timer_App.c  Timer_App.cpp  Timer_App.h  WatchDog_App.c  WatchDog_App.h  apps_config.h  apps_defines.h  apps_interfaces.h  apps_types.h  (+1 more)
Core/Src/Applications/Basic_App/: Chassis_App.c  Chassis_App.h  Gimbal_App.c  Gimbal_App.h  Shoot_App.c  Shoot_App.h
Core/Src/Applications/Generic_App/: Comm_App.c  Comm_App.h  Control_App.c  Control_App.h  IMU_App.c  IMU_App.h  PC_UART_App.c  PC_UART_App.h  Referee_App.c  Referee_App.h  Timer_App.c  Timer_App.h  WatchDog_App.c  WatchDog_App.h
Core/Src/Configs/: hero_config.hpp  mecanum_infantry_config.hpp  omni_infantry_config.hpp  robot_config.hpp  sentry_config.hpp  shared_config.hpp  test_config.hpp
Core/Src/Device/: CMakeLists.txt  LK_motor.c  buzzer.c  buzzer.h  device_defines.h  device_types.h  dwt.c  dwt.h  motor.c  motor.h
Core/Src/Device/imu/: CMakeLists.txt  bmi088_driver.c  bmi088_driver.h  bmi088_middleware.c  bmi088_middleware.h  imu.c  imu.h  ist8310driver.c  ist8310driver.h  ist8310driver_middleware.c  ist8310driver_middleware.h  struct_typedef.h
Core/Src/Device/oled/: CMakeLists.txt  ssd1306_driver.c  ssd1306_driver.h
Core/Src/Firmware/: CMakeLists.txt  buzzer.c  buzzer.h  cmake_install.cmake  comms.c  comms.h  dwt.c  error_handler.c  error_handler.h  pack_handler.c  pack_handler.h  queue_m.c  queue_m.h  referee_data.c  referee_data.h  self_check.h  timers_handler.c  timers_handler.h
Core/Src/Firmware/Device/: CMakeLists.txt  (+1 more)
Core/Src/ISRs/: CMakeLists.txt  can_isr.c  can_isr.cpp  can_isr.h  cmake_install.cmake  uart_isr.c  uart_isr.cpp  uart_isr.h
Core/Src/Lib/: CMakeLists.txt  cmake_install.cmake  uarm_defines.h  uarm_defines.hpp  uarm_lib.h  uarm_lib.hpp  uarm_math.c  uarm_math.cpp  uarm_math.h  uarm_math.hpp  uarm_os.h  uarm_os.hpp  uarm_types.h  uarm_types.hpp
Core/Src/Middleware/: CMakeLists.txt  dji_typec_middleware.cpp  middleware_defines.hpp  middleware_interfaces.hpp  middleware_types.hpp
Core/Src/Stubs/: CMakeLists.txt  subsystems_mocks.cpp  subsystems_mocks.hpp
Core/Src/Subsystems/: CMakeLists.txt  ammo_lid.cpp  ammo_lid.hpp  can_comm.c  can_comm.cpp  can_comm.h  can_comm.hpp  cmake_install.cmake  debug.c  debug.cpp  debug.h  debug.hpp  event_center.cpp  event_center.h  imu.c  imu.cpp  imu.h  imu.hpp  message_center.c  message_center.cpp  message_center.h  message_center.hpp  motors.c  motors.cpp  motors.h  motors.hpp  pc_comm.c  pc_comm.cpp  pc_comm.h  pc_comm.hpp  rc_comm.cpp  rc_comm.hpp  referee_ui.cpp  referee_ui.h  referee_ui.hpp  subsystems_defines.h  subsystems_interfaces.h  subsystems_types.h
Core/Src/User_Software/: CMakeLists.txt  auto_aim.c  auto_aim.h  auto_aim_pack.c  auto_aim_pack.h  comms.c  comms.h  debugger.c  debugger.h  error_handler.h  event_center.c  event_center.h  message_center.c  pack_handler.c  pack_handler.h  redirection.c  referee.c  referee.h  referee_ui.c  referee_ui.h  self_check.c  self_check.h
Drivers/CMSIS/DSP/: CMakeLists.txt
testbeds/: CMakeLists.txt  fake_arm_math.c
tests/: CMakeLists.txt  Chassis_App_Test.cpp  chassis_app_test.cpp  maths_test.cpp  pid_test.cpp  ramp_test.cpp  uarm_math_test.cpp
tests/fixtures/: CMakeLists.txt  chassis_app_fixture.hpp
tests/mocks/: CMakeLists.txt
(+545 files in other folders)
