set(ALGORITHMS_PATH ${PROJECT_SOURCE_DIR}/Core/Src/Algorithms)
set(APPLICATIONS_PATH ${PROJECT_SOURCE_DIR}/Core/Src/Applications)
set(FIRMWARE_PATH ${PROJECT_SOURCE_DIR}/Core/Src/Firmware)
set(LIB_PATH ${PROJECT_SOURCE_DIR}/Core/Src/Lib)
set(SUBSYSTEMS_PATH ${PROJECT_SOURCE_DIR}/Core/Src/Subsystems)

if (${CMAKE_BUILD_TYPE} STREQUAL "GTest")
    add_subdirectory(Lib)
    add_subdirectory(Algorithms)
    add_subdirectory(Subsystems)
    add_subdirectory(Applications)
else()
    add_subdirectory(Lib)
    add_subdirectory(Middleware)
    add_subdirectory(Algorithms)
    add_subdirectory(Firmware)
    add_subdirectory(Subsystems)
    add_subdirectory(Applications)
    add_subdirectory(ISRs)
endif()
